objects/hed__Relationship_Auto_Create__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Automatically generates a Relationship between a Contact and another Contact or a Contact and a Contact/Campaign Member based on a custom lookup field.</description>
    <label>Relationship Auto-Create</label>
    <fields>
        <fullName>hed__Field__c</fullName>
        <description>The label of the lookup field that triggers the creation of this Relationship when the field value is updated.</description>
        <inlineHelpText>The label of the lookup field that triggers the creation of this Relationship when the field value is updated.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Object__c</fullName>
        <description>The API name of the object (either Contact or CampaignMember) that the custom lookup field is on.</description>
        <inlineHelpText>The API name of the object (either Contact or CampaignMember) that the custom lookup field is on.</inlineHelpText>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Campaign_Types__c</fullName>
        <description>For Auto-Create Relationships based on Campaign Members, the list of Campaign types the automation applies to. This field will be blank for Auto-Create Relationships based on Contacts.</description>
        <inlineHelpText>For Auto-Create Relationships based on Campaign Members, the list of Campaign types the automation applies to. This field will be blank for Auto-Create Relationships based on Contacts.</inlineHelpText>
        <label>Campaign Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hed__Relationship_Type__c</fullName>
        <description>The Relationship type (referer, family, etc.) to be created between the base object defined in the Object field, and the lookup object.</description>
        <inlineHelpText>The Relationship type (referer, family, etc.) to be created between the base object defined in the Object field, and the lookup object.</inlineHelpText>
        <label>Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>